# recbar

./: CHANGELOG.md  GROK_REVIEW.md  LICENSE  README.md  config.example.json  install.sh  pyproject.toml  recbar.desktop  recbar.service
.circleci/: config.yml
.github/workflows/: ci.yml
grok_review/: 00_READ_THIS_FIRST.md  GROK_REVIEW.md  README.md  __init__.py  __main__.py  auto_scene.py  bar.py  chapters.py  obs_client.py  obs_connection.py  overlay.py  poller.py  pyproject.toml  test_suite.py  web_remote.py
recbar/: __init__.py  __main__.py  auto_scene.py  bar.py  commands.py  config.py  ctl.py  ipc.py  obs_client.py  overlay.py  platform.py  poller.py  state.py  test_suite.py  volume_meter.py  web_remote.py
tests/: test_auto_scene.py  test_chapters.py  test_commands.py  test_config.py  test_ipc.py  test_platform.py
